2013-12-11  Larus  <larus@icdhcp-1-098.epfl.ch>

	* QtSpim/QtSpim.pro:
	Set flags for clang on Mac OS.

	* CPU/run.c (run_spim):
	Eliminate nop assignments caught by clang.

2013-12-10    <larus@IC-LMC-ICDO-01>

	* CPU/version.h:
	Version 9.1.11:

	* CPU/inst.c, CPU/op.h, CPU/parser.y, Tests/tt.core.s:
	MOVF and MOVT instructions were improperly parsed, stored, and unparsed.

	* CPU/data.c (increment_data_pc):
	[https://sourceforge.net/p/spimsimulator/bugs/53]:
	Off-by-one error in computing space when growing data segment.

	* QtSpim/regwin.cpp:
	Display FP control register index values, not contents.

2013-12-09    <larus@IC-LMC-ICDO-01>

	* Switched to Visual Studio 2012, ported installer to
	InstallShieldLE since VS installer no longer supported.

2013-12-08    <larus@IC-LMC-ICDO-01>

	* CPU/version.h:
	Version 9.1.10

2013-11-14    <larus@IC-LMC-ICDO-01>

	* CPU/inst.c (eval_imm_expr):
	[https://sourceforge.net/p/spimsimulator/bugs/51]:
	Incorrectly handled indexed offset of extern symbol.

2013-11-10    <larus@IC-LMC-ICDO-01>

	* QtSpim/datawin.cpp (formatWord):
	[https://sourceforge.net/p/spimsimulator/bugs/52]:
	Negative decimal should be preceeded by spaces, not zeros, when
	printing data.

2013-10-27  Larus  <larus@ubuntu>

	* Setup/qtspim_debian_deployment/control.prototype:n
	Added Installed-Size field in DEBIAN/control file.

2013-10-15    <larus@IC-LMC-ICDO-01>

	* QtSpim/datawin.c QtSpim/spimview.h
	[https://sourceforge.net/p/spimsimulator/bugs/50]:
	Did not properly format and print data segments that were not a
	multiple of 16 bytes.

2013-10-14    <larus@IC-LMC-ICDO-01>

	* CPU/scanner.l [https://sourceforge.net/p/spimsimulator/bugs/49]:
	Did not properly scan escaped characters (e.g. '\n').

2013-10-13    <larus@IC-LMC-ICDO-01>

	* QtSpim/main.cpp, QtSpim/QtSpim.pro, QtSpim/spim_support.c
	[https://sourceforge.net/p/spimsimulator/bugs/47]
	[https://sourceforge.net/p/spimsimulator/bugs/48]:
	Port QtSpim to Qt 5.1.

2013-07-20    <JIM@LS-RED>
