@@ -59,9 +59,9 @@
 
 <body alink="fushia" bgcolor="white" link="blue" text="black" vlink="purple">
 
-  <p><b>Appendix A from Patterson and Hennessey, <i>Computer Organization
+  <a href="#book"><p><b>Appendix A from Patterson and Hennessey, <i>Computer Organization
         and Design: The Hardware/Software Interface</i>, Third Edition. Copyright Morgan
-      Kaufmann Publishers. Used by permission.</b></p>
+      Kaufmann Publishers. Used by permission.</b></p><a>
   <div class="body">
     <h1 class="centered ">Assemblers, Linkers, and the SPIM Simulator</h1>
     <p class="centered "><i>James R. Larus<br></i> Microsoft Research<br>spim@larusstone.org</p>
